fix: Cost/Price on mobile

--- a/src/components/Cost/index.scss
+++ b/src/components/Cost/index.scss
@@ -216,7 +216,7 @@
 			}
 		}
 		.slides {
-			margin-bottom: 200px;
+			margin-bottom: 20px;
 		}
 		h4 {
 			font-weight: 700;
@@ -226,21 +226,23 @@
 			margin-bottom: 14px;
 		}
 		.cost_block {
-			position: absolute;
-			top: 270px;
-			right: -50px;
 			width: 344px;
 			height: 87px;
-			display: flex;
-			align-items: center;
 			padding-left: 50px;
-			background: #feff99;
+			margin-right: -60px;
+			margin-bottom: 20px;
 			border: 1px solid #ffffff;
 			border-radius: 25px;
+
+			display: flex;
+			align-self: flex-end;
+			align-items: center;
+
 			font-weight: 700;
 			font-size: 48px;
 			line-height: 120%;
 			color: #424242;
+			background: #feff99;
 		}
 		p.desc {
 			font-weight: 500;
